--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,10 @@ a {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
 
+.dropdown:active .dropdown-content {
+    display: block;
 }
 
 #year {
