--- a/css/style.css
+++ b/css/style.css
@@ -60,21 +60,23 @@ a {
 .top-container {
     margin: 0 0 0 0;
     margin-top: 0px;
-    padding-top: 20px;
-    padding-bottom: 0px;
+    /*    padding-top: 20px;*/
+    /*    padding-bottom: 0px;*/
+    height: 90vh;
 }
 
 #life {
     font-size: 20px;
     margin: 0 auto 0 auto;
-    width: 20%;
 }
 
 .mnt {
     margin: 0 auto 0 auto;
-    position: relative;
-    bottom: -3px;
+    position: absolute;
+    bottom: 0px;
     width: 86%;
+    left: 1%;
+    right: 1%;
 }
 
 .middle-container {
@@ -117,7 +119,7 @@ a {
 }
 
 .icons_jq {
-    height: 110px;
+    width: 28%;
     margin-bottom: 80px;
 }
 
@@ -140,8 +142,9 @@ a {
 }
 
 #nav-bar {
-    position: relative;
-    right: 130px;
+    position: absolute;
+    right: 1%;
+    /*    left: 1%;*/
     padding: 10 0 10 0;
     float: right;
     margin: auto;
@@ -151,7 +154,7 @@ a {
     font-size: 16px;
     font-family: 'Montserrat', serif;
     margin: 20px;
-    padding: 2px
+    padding: 0px cursor: pointer;
 }
 
 .dropdown {
@@ -160,14 +163,19 @@ a {
 }
 
 .dropdown-content {
+    /*        display: block;*/
+
     display: none;
     position: absolute;
+    left: -100%;
+
     background-color: #33cc33;
     color: #ffffff;
     border-radius: 8px;
-    padding: 6px;
+    padding: 12px 0px 12px 0px;
     margin: 0 4px 4px 4px;
-    min-width: 140px;
+    min-width: 180px;
+    max-width: auto;
     z-index: 1;
 }
 
@@ -176,8 +184,43 @@ a {
     font-weight: bolder;
 }
 
+.dropdown-content a:hover {
+    color: #EDE8D4;
+    font-weight: bolder;
+}
+
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.tooltip {
+    display: inline;
+    position: relative;
+}
+
+.tooltip:hover:after {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: #444;
+    border-radius: 8px;
+    color: #fff;
+    content: attr(title);
+    margin: -82px auto 0;
+    font-size: 16px;
+    padding: 13px;
+    width: 220px;
+}
+
+.tooltip:hover:before {
+    border: solid;
+    border-color: #444 transparent;
+    border-width: 12px 6px 0 6px;
+    content: "";
+    left: 45%;
+    bottom: 30px;
+    position: absolute;
 }
 
 .croto {
@@ -187,4 +230,28 @@ a {
 #year {
     font-size: 12px;
     color: #333;
+}
+
+@media screen and (min-width: 200px) and (max-width: 768px) {
+    #nav-bar {
+        position: absolute;
+        right: 1%;
+        left: 1%;
+        padding: 10 0 10 0;
+    }
+
+    .icons_jq {
+        width: 85% !important;
+        margin-bottom: 80px;
+    }
+
+    .top-container h1 {
+        font-size: 10vw !important;
+        width: 100%;
+    }
+
+    #life {
+        font-size: 17px;
+        margin: 0 auto 0 auto;
+    }
 }
