--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,14 @@ a {
     margin: auto;
 }
 
-p{
+section p,
+footer p {
     font-size: 1.2rem;
-        line-height: 2.4rem;
+    line-height: 2.4rem;
 
-    
+
 }
+
 .glow:hover {
     text-shadow: 2px 2px 5px #3ACE3B;
     transition: 0.5s;
