--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,7 @@ a {
     margin: auto;
 }
 
-section p,
-footer p {
+section p {
     font-size: 1.2rem;
     line-height: 2.4rem;
 
@@ -83,10 +82,12 @@ footer p {
 .mnt {
     margin: 0 auto 0 auto;
     position: absolute;
-    bottom: 0px;
+    bottom: 00;
     width: 86%;
     left: 1%;
     right: 1%;
+
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.9, transparent), to(white));
 }
 
 .middle-container {
@@ -94,7 +95,7 @@ footer p {
     margin: 0px;
     padding: 30px;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 90px;
     padding-bottom: 70px;
 }
 
@@ -129,14 +130,7 @@ footer p {
     height: 160px;
 }
 
-.foot-container {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 13px;
-    width: 50%;
-    margin: auto;
-}
+
 
 .head-container {
     padding-top: 40px;
@@ -213,41 +207,20 @@ footer p {
     justify-content: center;
 }
 
-.tooltip {
-    display: inline;
-    position: relative;
-}
 
-.tooltip:hover:after {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    background: #444;
-    border-radius: 8px;
-    color: #fff;
-    content: attr(title);
-    margin: -82px auto 0;
-    font-size: 16px;
-    padding: 13px;
-    width: 220px;
+.foot-container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13px;
+    margin: auto;
 }
-
-.tooltip:hover:before {
-    border: solid;
-    border-color: #444 transparent;
-    border-width: 12px 6px 0 6px;
-    content: "";
-    left: 45%;
-    bottom: 30px;
-    position: absolute;
-}
-
 
 #year {
     font-size: 12px;
     color: #333;
 }
+
 
 @media screen and (min-width: 200px) and (max-width: 768px) {
     #nav-bar {
@@ -262,12 +235,25 @@ footer p {
         height: 80px;
     }
 
+    .top-container h1,
+    .top-container p {
+        position: absolute;
+        top: 110px;
+    }
+
+    .top-container p {
+        top: 170px;
+        left: 1%;
+        right: 1%;
+    }
+
+
     .top-container {
         height: 88vh;
     }
 
     .top-container h1 {
-        font-size: 10vw !important;
+        font-size: 12vw !important;
         width: 100%;
     }
 
@@ -279,10 +265,11 @@ footer p {
     .mnt {
         margin: 0 auto 0 auto;
         position: absolute;
-        bottom: 50px;
+        bottom: 180px;
         width: 100%;
         left: 1%;
         right: 1%;
+         -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
     }
 
     .insight {
@@ -294,5 +281,9 @@ footer p {
 
     #images h4 {
         font-size: 13px;
+    }
+
+    .foot-container {
+        font-size: 16px
     }
 }
