--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,17 @@ section p {
 }
 
 /*/////////////////////////CLASSES//////////////////////*/
+.container{
+    margin: 150px 0px
+}
 .top-container {
     margin: 0 0 0 0;
     margin-top: 0px;
     height: 90vh;
 }
-
+ul, li{
+    text-align: start;
+}
 #life {
     font-size: 20px;
     margin: 0 auto 0 auto;
@@ -130,6 +135,9 @@ section p {
     padding-bottom: 70px;
 }
 
+.projects h4{
+    margin-top: 6px;
+}
 
 #images {
     margin: auto;
@@ -137,7 +145,7 @@ section p {
     width: 80%;
 }
 
-.icons {
+.iconBox .icons {
     margin: 25px 45px;
     height: 120px;
 }
@@ -147,6 +155,14 @@ section p {
     display: inline-block;
     text-align: center;
     /* width: 240px; */
+}
+.tech-stack .icons {
+    margin: 0px 13px;
+    height: 50px;
+}
+.tech-stack span{
+    display: inline-block;
+    margin: 15px 0px;
 }
 
 .iconText {
