--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,11 @@ ul, li{
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.showBtn{
+    border-radius: 5px;
+    margin-top: 20px;
+    padding: 5px;
+}
 
 .show {
     display: block;
@@ -268,7 +273,7 @@ ul, li{
 }
 
 .scroll-top{
-    
+
 }
 
 
